Project section updated

--- a/index.html
+++ b/index.html
@@ -710,35 +710,7 @@
         <div class="col-lg-12">
           <!-- Project Item Boxes start -->
           <div class="row project-item-boxes align-items-center">
-            <div class="col-md-6 project-item-box architecture interior">
-              <!-- Project Item Start -->
-              <div class="project-item wow fadeInUp">
-                <div class="project-image">
-                  <div class="project-featured-image">
-                    <figure class="image-anime">
-                      <img src="https://lh3.googleusercontent.com/p/AF1QipPAgKetUcG_OuQ6EmUYB6L84pZ0FrskobNlq49P=s1360-w1360-h1020-rw" alt="" />
-                    </figure>
-                  </div>
-
-                  <div class="project-btn">
-                    <a href="projects.html"
-                      ><img src="images/arrow-white.svg" alt=""
-                    /></a>
-                  </div>
-                </div>
-
-                <div class="project-content">
-                  <h3>residential spaces</h3>
-                  <h2>
-                    <a href="projects.html"
-                      >Creating Comfortable, Stylish Spaces You’re Proud to Call Home</a
-                    >
-                  </h2>
-                </div>
-              </div>
-              <!-- Project Item End -->
-            </div>
-
+            
             <div class="col-md-6 project-item-box architecture">
               <!-- Project Item Start -->
               <div class="project-item wow fadeInUp" data-wow-delay="0.2s">
@@ -750,7 +722,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="project1.html"
+                    <a href="/exteriors/project1.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -759,7 +731,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="project1.html"
+                    <a href="/exteriors/project1.html"
                       >Residence for Mr Jithin</a
                     >
                   </h2>
@@ -778,7 +750,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="project2.html"
+                    <a href="/exteriors/project2.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -787,7 +759,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="project2.html"
+                    <a href="/exteriors/project2.html"
                       >Residence for Mr Binu</a
                     >
                   </h2>
@@ -806,7 +778,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="project3.html"
+                    <a href="/exteriors/project3.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -815,7 +787,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="project3.html"
+                    <a href="/exteriors/project3.html"
                       >Residence for Mr Vijayakumar</a
                     >
                   </h2>
@@ -834,7 +806,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="/project1.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -843,7 +815,7 @@
                 <div class="project-content">
                   <h3>luxury homes</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="/project1.html"
                       >Crafting Dream Homes That Redefine Luxury Living</a
                     >
                   </h2>
@@ -863,7 +835,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="/exteriors/project3.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -872,7 +844,7 @@
                 <div class="project-content">
                   <h3>outdoor living spaces</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="/exteriors/project3.html"
                       >Seamless Transitions from Indoors to Outdoors</a
                     >
                   </h2>
@@ -892,7 +864,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="/project1.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -901,7 +873,7 @@
                 <div class="project-content">
                   <h3>modern designs</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="/project1.html"
                       >Designs That Reflect Today, and Inspire Tomorrow</a
                     >
                   </h2>
