--- a/project3.html
+++ b/project3.html
@@ -176,7 +176,7 @@
 
         <!-- Content -->
  <div class="container py-5">
-    <h2 class="text-center mb-4">Residence for Mr Vijayakumar</h2>
+    <h2 class="text-center mb-4">Interiors for Mr Vijayakumar</h2>
     <div class="row g-4">
       <div class="col-12 col-sm-6 col-md-4">
         <div class="card shadow-sm">
