--- a/exteriors/project2.html
+++ b/exteriors/project2.html
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;500;700&display=swap" rel="stylesheet" />
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/slicknav.min.css" />
-  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/all.min.css" />
-  <link rel="stylesheet" href="css/animate.css" />
-  <link rel="stylesheet" href="css/magnific-popup.css" />
-  <link rel="stylesheet" href="css/mousecursor.css" />
-  <link rel="stylesheet" href="css/custom.css" />
+  <link rel="stylesheet" href="/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/css/slicknav.min.css" />
+  <link rel="stylesheet" href="/css/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="/css/all.min.css" />
+  <link rel="stylesheet" href="/css/animate.css" />
+  <link rel="stylesheet" href="/css/magnific-popup.css" />
+  <link rel="stylesheet" href="/css/mousecursor.css" />
+  <link rel="stylesheet" href="/css/custom.css" />
 
   <style>
     :root {
@@ -84,7 +84,7 @@
         target="_blank"
       >
         <img
-          src="images/whatsapp.png"
+          src="/images/whatsapp.png"
           alt="SMS NOW"
           title="SMS NOW"
           style="height: 60px; width: 60px"
@@ -102,7 +102,7 @@
         "
       >
         <img
-          src="images/phone.gif"
+          src="/images/phone.gif"
           alt="Call NOW"
           title="Call NOW"
           style="height: 80px; margin-bottom: -12px"
@@ -124,7 +124,7 @@
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="/index.html">Home</a>
                                     
                                 </li>
                                 <li class="nav-item"><a class="nav-link" href="/about.html">About Us</a>
@@ -176,12 +176,12 @@
 
         <!-- Content -->
  <div class="container py-5">
-    <h2 class="text-center mb-4">Interiors for Mr Jithin</h2>
+    <h2 class="text-center mb-4">Residence for Mr Binu</h2>
     <div class="row g-4">
       <div class="col-12 col-sm-6 col-md-4">
         <div class="card shadow-sm">
           <div class="card-img-wrapper">
-            <img src="/images/interior/project1/IMG_1425.JPG" class="gallery-image" alt="Nature 1" data-bs-toggle="modal"
+            <img src="/images/exterior/project3/p1.jpg" class="gallery-image" alt="Nature 1" data-bs-toggle="modal"
                data-bs-target="#imageModal"
                onclick="showImage(this.src)">
           </div>
@@ -191,7 +191,7 @@
       <div class="col-12 col-sm-6 col-md-4">
         <div class="card shadow-sm">
           <div class="card-img-wrapper">
-            <img src="/images/interior/project1/IMG_1439.JPG" class="gallery-image" alt="City" data-bs-toggle="modal"
+            <img src="/images/exterior/project3/p2.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
                data-bs-target="#imageModal"
                onclick="showImage(this.src)" >
           </div>
@@ -201,42 +201,13 @@
       <div class="col-12 col-sm-6 col-md-4">
         <div class="card shadow-sm">
           <div class="card-img-wrapper">
-            <img src="/images/interior/project1/IMG_1503-min.JPG" class="gallery-image" alt="Mountains" data-bs-toggle="modal"
+            <img src="/images/exterior/project3/p3.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
                data-bs-target="#imageModal"
                onclick="showImage(this.src)" >
           </div>
         </div>
       </div>
-
-      <div class="col-12 col-sm-6 col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-img-wrapper">
-            <img src="/images/interior/project1/IMG_1560-min.JPG" class="gallery-image" alt="Forest" data-bs-toggle="modal"
-               data-bs-target="#imageModal"
-               onclick="showImage(this.src)" >
-          </div>
-        </div>
-      </div>
-
-      <div class="col-12 col-sm-6 col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-img-wrapper">
-            <img src="/images/interior/project1/IMG_1597-min.JPG" class="gallery-image" alt="Technology" data-bs-toggle="modal"
-               data-bs-target="#imageModal"
-               onclick="showImage(this.src)" >
-          </div>
-        </div>
-      </div>
-
-      <div class="col-12 col-sm-6 col-md-4">
-        <div class="card shadow-sm">
-          <div class="card-img-wrapper">
-            <img src="/images/interior/project1/IMG_1609-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
-               data-bs-target="#imageModal"
-               onclick="showImage(this.src)" >
-          </div>
-        </div>
-      </div>
+      
     </div>
   </div>
 <!-- Modal for Fullscreen Image View -->
@@ -306,19 +277,19 @@
             <h3>Quick links</h3>
             <ul>
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About Us</a>
+                <a class="nav-link" href="/about.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="services.html">Services</a>
+                <a class="nav-link" href="/services.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
+                <a class="nav-link" href="/projects.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link" href="/contact.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -330,12 +301,12 @@
           <div class="footer-links">
             <h3>Services</h3>
             <ul>
-              <li><a href="projects.html">Architecture design and construction</a></li>
+              <li><a href="/projects.html">Architecture design and construction</a></li>
               <li>
-                <a href="projects.html">Interior design and execution</a>
+                <a href="/projects.html">Interior design and execution</a>
               </li>
               <li>
-                <a href="projects.html">Construction related all services</a>
+                <a href="/projects.html">Construction related all services</a>
               </li>
             </ul>
           </div>
@@ -430,23 +401,23 @@
   </script>
 
   <!-- Core JS Files -->
-  <script src="js/jquery-3.7.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/validator.min.js"></script>
-  <script src="js/jquery.slicknav.js"></script>
-  <script src="js/swiper-bundle.min.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.counterup.min.js"></script>
-  <script src="js/isotope.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/SmoothScroll.js"></script>
-  <script src="js/parallaxie.js"></script>
-  <script src="js/gsap.min.js"></script>
-  <script src="js/magiccursor.js"></script>
-  <script src="js/SplitText.js"></script>
-  <script src="js/ScrollTrigger.min.js"></script>
-  <script src="js/jquery.mb.YTPlayer.min.js"></script>
-  <script src="js/wow.min.js"></script>
-  <script src="js/function.js"></script>
+  <script src="/js/jquery-3.7.1.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/validator.min.js"></script>
+  <script src="/js/jquery.slicknav.js"></script>
+  <script src="/js/swiper-bundle.min.js"></script>
+  <script src="/js/jquery.waypoints.min.js"></script>
+  <script src="/js/jquery.counterup.min.js"></script>
+  <script src="/js/isotope.min.js"></script>
+  <script src="/js/jquery.magnific-popup.min.js"></script>
+  <script src="/js/SmoothScroll.js"></script>
+  <script src="/js/parallaxie.js"></script>
+  <script src="/js/gsap.min.js"></script>
+  <script src="/js/magiccursor.js"></script>
+  <script src="/js/SplitText.js"></script>
+  <script src="/js/ScrollTrigger.min.js"></script>
+  <script src="/js/jquery.mb.YTPlayer.min.js"></script>
+  <script src="/js/wow.min.js"></script>
+  <script src="/js/function.js"></script>
 </body>
 </html>
