added more images

--- a/project1.html
+++ b/project1.html
@@ -237,6 +237,178 @@
           </div>
         </div>
       </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1626-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1616-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1602-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1601-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1592-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1577-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1571-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1554_1-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1537-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1536-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1527-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1513-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1510-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1501-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1490-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1487-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1478-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1468-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1451-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 <!-- Modal for Fullscreen Image View -->
