--- a/project3.html
+++ b/project3.html
@@ -237,6 +237,42 @@
           </div>
         </div>
       </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project3/IMG_4149-min.jpg" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project3/IMG_4173-min.jpg" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project3/IMG_4179-min.jpg" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project3/IMG_4196-min (1).jpg" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 <!-- Modal for Fullscreen Image View -->
