--- a/contact.html
+++ b/contact.html
@@ -191,48 +191,42 @@
 <!-- Page Header End -->
 <!-- Page Contact Us Start -->
 <div class="page-contact-us">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <!-- Contact Us Image Start -->
-                <div class="contact-us-image">
-                    <figure class="image-anime reveal">
-                        <img src="https://lh3.googleusercontent.com/p/AF1QipMPF_p97fGkLF5LDJItIKBAmF1Q5i_lOpqvvJFG=s1360-w1360-h1020-rw" alt="">
-                    </figure>
-                </div>
-                <!-- Contact Us Image End -->
-            </div>
-
-            <div class="col-lg-6">
-                <!-- Contact Us Form Start -->
-                <div class="contact-us-form">
-                    <!-- Section Title Start -->
-                    <div class="section-title">
-                        <h3 class="wow fadeInUp">contact form</h3>
-                        <h2 class="text-anime-style-2" data-cursor="-opaque">We would love to hear <span>from you</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Your email address will not be published. Required fields are marked *</p>
-                    </div>
-                    <!-- Section Title End -->
-                    <!-- Contact Form Start -->
-                    <div class="contact-form">
-                        <!-- Contact Form Start -->
-                       <form method="post">
-                            <input type="text" name="name" class="form-control col-lg-6 mb-4" required class="w-100 form-control border-0 py-3 mb-4" placeholder="Full Name">
-                            <input name="mobile" class="form-control col-lg-6 mb-4" required type="tel" class="w-100 form-control border-0 py-3 mb-4" placeholder="Mobile No.">
-                            <input name="email" class="form-control col-lg-12 mb-4" required type="email" class="w-100 form-control border-0 py-3 mb-4" placeholder="Email">
-                            <textarea name="message" class="form-control col-lg-12 mb-5" required class="w-100 form-control border-0 mb-4" rows="5" placeholder="Your Message"></textarea>
-                            <button type="submit" name="btn1" value="submit" class="btn-default">Submit</button>
-                        </form>
-                        <!-- Contact Form End -->
-                    </div>
-                    <!-- Contact Form End -->
-                </div>
-                <!-- Contact Us Form End -->
-            </div>
+  <div class="container">
+    <div class="row">
+      <!-- Left image -->
+      <div class="col-lg-6">
+        <div class="contact-us-image">
+          <figure class="image-anime reveal">
+            <img src="https://lh3.googleusercontent.com/p/AF1QipMPF_p97fGkLF5LDJItIKBAmF1Q5i_lOpqvvJFG=s1360-w1360-h1020-rw" alt="">
+          </figure>
         </div>
+      </div>
+
+      <!-- Right form -->
+      <div class="col-lg-6">
+        <div class="contact-us-form">
+          <div class="section-title">
+            <h3 class="wow fadeInUp">contact form</h3>
+            <h2 class="text-anime-style-2" data-cursor="-opaque">We would love to hear <span>from you</span></h2>
+            <p class="wow fadeInUp" data-wow-delay="0.2s">Your email address will not be published. Required fields are marked *</p>
+          </div>
+
+          <div class="contact-form">
+            <form id="whatsappForm">
+              <input type="text" name="name" class="form-control mb-4" required placeholder="Full Name">
+              <input name="mobile" type="tel" class="form-control mb-4" required placeholder="Mobile No.">
+              <input name="email" type="email" class="form-control mb-4" required placeholder="Email">
+              <textarea name="message" class="form-control mb-4" required rows="5" placeholder="Your Message"></textarea>
+              <button type="submit" class="btn-default">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
-<!-- Page Contact Us End -->
+
+ <!-- End -->
 
 <div class="row">
     <div class="row text-center">
@@ -528,7 +522,29 @@
     <script src="js/wow.min.js"></script>
     <!-- Main Custom js file -->
     <script src="js/function.js"></script>
-    
+    <!-- WhatsApp Send Script -->
+<script>
+  document.getElementById('whatsappForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    const name = this.name.value.trim();
+    const mobile = this.mobile.value.trim();
+    const email = this.email.value.trim();
+    const message = this.message.value.trim();
+
+    const text = `New Contact Query:\n\nName: ${name}\nMobile: ${mobile}\nEmail: ${email}\nMessage: ${message}`;
+
+    const phoneNumber = "916282521445";
+    const whatsappURL = `https://api.whatsapp.com/send?phone=${phoneNumber}&text=${encodeURIComponent(text)}`;
+
+
+    window.open(whatsappURL, '_blank');
+
+ 
+    this.reset();
+  });
+</script>
+
     <script type="application/ld+json"></script>
 
 </html>
