--- a/exteriors/project3.html
+++ b/exteriors/project3.html
@@ -206,6 +206,105 @@
           </div>
         </div>
       </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_3971-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_3976-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4030-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4038-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4064-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4066-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4074-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4094-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4097-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4099-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/exterior/project2/IMG_4102-min.jpg" class="gallery-image" alt="City" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
 
       
     </div>
