--- a/project1.html
+++ b/project1.html
@@ -409,6 +409,96 @@
           </div>
         </div>
       </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1295-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1313_1-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1351-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1365-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1377-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1394-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1397-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1398-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1402-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
+       <div class="col-12 col-sm-6 col-md-4">
+        <div class="card shadow-sm">
+          <div class="card-img-wrapper">
+            <img src="/images/interior/project1/IMG_1408-min.JPG" class="gallery-image" alt="Travel" data-bs-toggle="modal"
+               data-bs-target="#imageModal"
+               onclick="showImage(this.src)" >
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 <!-- Modal for Fullscreen Image View -->
