--- a/project2.html
+++ b/project2.html
@@ -273,7 +273,7 @@
                   <div class="col-md-6">
                     <!-- Footer Logo Start -->
                     <div class="footer-logo mt-5">
-                       <img
+                      <img
                         src="/images/300 x 300 a.png"
                         alt="Logo"
                         style="width: 150px"
@@ -339,12 +339,12 @@
           <div class="footer-links">
             <h3>Services</h3>
             <ul>
-              <li><a href="projects.html">Architecture design and construction</a></li>
+              <li><a href="/services.html">Architecture design and construction</a></li>
               <li>
-                <a href="projects.html">Interior design and execution</a>
+                <a href="/services.html">Interior design and execution</a>
               </li>
               <li>
-                <a href="projects.html">Construction related all services</a>
+                <a href="/services.html">Construction related all services</a>
               </li>
             </ul>
           </div>
