--- a/exteriors/project3.html
+++ b/exteriors/project3.html
@@ -397,15 +397,15 @@
 
         <div class="col-lg-2 col-md-6 mt-5 pt-5">
           <!-- Footer Links Start -->
-          <div class="footer-links">
+            <div class="footer-links">
             <h3>Services</h3>
             <ul>
-              <li><a href="/projects.html">Architecture design and construction</a></li>
+              <li><a href="services.html">Architecture design and construction</a></li>
               <li>
-                <a href="/projects.html">Interior design and execution</a>
+                <a href="services.html">Interior design and execution</a>
               </li>
               <li>
-                <a href="/projects.html">Construction related all services</a>
+                <a href="services.html">Construction related all services</a>
               </li>
             </ul>
           </div>
