--- a/exteriors/project2.html
+++ b/exteriors/project2.html
@@ -301,12 +301,12 @@
            <div class="footer-links">
             <h3>Services</h3>
             <ul>
-              <li><a href="services.html">Architecture design and construction</a></li>
+              <li><a href="/services.html">Architecture design and construction</a></li>
               <li>
-                <a href="services.html">Interior design and execution</a>
+                <a href="/services.html">Interior design and execution</a>
               </li>
               <li>
-                <a href="services.html">Construction related all services</a>
+                <a href="/services.html">Construction related all services</a>
               </li>
             </ul>
           </div>
