--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             <div class="service-image">
               <a href="services.html" data-cursor-text="View">
                 <figure class="image-anime">
-                  <img src="https://lh3.googleusercontent.com/p/AF1QipOFjfiOdedkapp5Mzq4yWIMtsbA9ZLjeQRZ-OzI=s1360-w1360-h1020-rw" alt="" />
+                  <img src="/images/exterior/project3/p3.jpg" alt="" />
                 </figure>
               </a>
             </div>
