--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
       <title>Interior Design Services in Kerala | Home, Office & Commercial Interiors</title> 
       <meta name="Title" content="Interior Design Services in Kerala | Home, Office & Commercial Interiors">
-      <meta name="description" content=" Explore Coax Architecture Studio’s services—bedroom, kitchen, living room, office, and commercial interior design in Kerala. Custom solutions that fit your lifestyle and budget.">
+      <meta name="description" content=" Explore Coax Architecture Studio's services—bedroom, kitchen, living room, office, and commercial interior design in Kerala. Custom solutions that fit your lifestyle and budget.">
       <meta name="keywords" content="  interior design services in Kerala, office interior design in Kerala, kitchen interior design in Kerala, bathroom interior design in Kerala, bedroom interior design in Kerala, modern living room design in Kerala, modern kitchen design in Kerala, stylish wallpaper design service in Kerala, commercial interior design in Kerala">
       <link rel="canonical" href="index.html"/>
       <meta name="author" content="Coax Architecture Studio Kerala">
@@ -202,7 +202,7 @@
             <div class="service-image">
               <a href="services.html" data-cursor-text="View">
                 <figure class="image-anime">
-                  <img src="https://lh3.googleusercontent.com/p/AF1QipOFjfiOdedkapp5Mzq4yWIMtsbA9ZLjeQRZ-OzI=s1360-w1360-h1020-rw" alt="" />
+                  <img src="/images/exterior/project3/p3.jpg" alt="" />
                 </figure>
               </a>
             </div>
